# nix-rust-template

./: Cargo.toml  README.md  docker-image.nix  flake.nix  items.db
frontend/: index.html
nixos/: default.nix
nixos/modules/: server.nix
nixos/tests/: verify-host-configuration.nix
server/: Cargo.toml
server/.sqlx/: query-0bb4a62b6158409204a9f99e487dbcb05771a085fe81652a0f9305852555f4fb.json  query-419d693e7e2de0930960148470c5c35552027b3616b3dd35777ef7227ec80995.json
server/migrations/: 20240916162916_create-items.sql
server/src/: app_state.rs  cli.rs  db.rs  item.rs  lib.rs  main.rs  routes.rs
server/templates/: items.html
server/tests/: server.rs
