[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
axum = { version = "0.7", features = ["tracing"] }
axum-extra = { version = "0.9", features = ["typed-routing"] }
clap = { version = "4", features = ["derive"] }
lazy_static = "1.5.0"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "sqlite", "uuid"] }
tokio = { version = "1", features = [ "full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
ureq = "2"
backoff = { version = "0.4", features = ["tokio"] }
